test/zinc_source/compile_errors/concurrency/02_select_receive_non_channel.zn
// expected-error: 'value' is not a channel

fn main() {
    value = 1

    select {
        case msg = <-value {
            print("{msg}")
        }
    }
}
